Fixed resume + text readability

--- a/index.css
+++ b/index.css
@@ -73,6 +73,6 @@ body {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 30%;
+        width: auto;
 }
     
